[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Ben Cochrane <ben.cochrane2112@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.4"
serde = { version = "1", features = ["derive"]}

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = "1"
